--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "check-format": "prettier --check ./src"
   },
   "dependencies": {
+    "firebase": "^10.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
