--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,10 @@
     "types": ["vite/client", "vite-plugin-svgr/client", "node"],
     "module": "ESNext",
     "skipLibCheck": true,
-    "baseUrl": "src",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    },
 
     /* Bundler mode */
     "moduleResolution": "bundler",
