Installed shadcn select

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "check-format": "prettier --check ./src"
   },
   "dependencies": {
+    "@radix-ui/react-select": "^2.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "firebase": "^10.7.1",
