--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "check-format": "prettier --check ./src"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.29.2",
     "firebase": "^10.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -20,6 +21,7 @@
     "vite-tsconfig-paths": "^4.2.1"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.28.11",
     "@types/node": "^20.11.7",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
