--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "format": "prettier --write ./src",
-    "check-format": "prettier --check ./src"
+    "check-format": "prettier --check ./src",
+    "firebase-deploy": "firebase deploy"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.29.2",
