chore: Update eslint configuration with prettier integration

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,7 @@
         "es2021": true
     },
     "extends": [
+        "prettier",
         "standard-with-typescript",
         "plugin:react/recommended"
     ],
