--- a/src/.prettierrc
+++ b/src/.prettierrc
@@ -3,5 +3,6 @@
   "semi": true,
   "singleQuote": false,
   "trailingComma": "all",
+  "arrowParens": "always",
   "plugins": ["prettier-plugin-tailwindcss"]
 }
