Added dependency for i18n

--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "dependencies": {
     "@tanstack/react-query": "^5.29.2",
     "firebase": "^10.7.1",
+    "i18next": "^23.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
+    "react-i18next": "^15.0.1",
     "react-router-dom": "^6.20.1",
     "vite-tsconfig-paths": "^4.2.1"
   },
